@@ -6,6 +6,7 @@ import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.ListTag;
 import net.minecraft.nbt.NbtIo;
 import net.minecraft.network.protocol.Packet;
+import net.minecraft.network.protocol.game.ClientGamePacketListener;
 import net.minecraft.network.protocol.game.ClientboundPlayerInfoRemovePacket;
 import net.minecraft.network.protocol.game.ClientboundPlayerInfoUpdatePacket;
 import net.minecraft.network.protocol.game.ClientboundSetEquipmentPacket;
@@ -13,6 +14,8 @@ import net.minecraft.server.MinecraftServer;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.entity.EquipmentSlot;
+import net.minecraft.world.entity.ai.attributes.AttributeInstance;
+import net.minecraft.world.entity.ai.attributes.AttributeMap;
 import net.minecraft.world.food.FoodData;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
@@ -21,8 +24,8 @@ import net.minelink.ctplus.compat.base.NpcIdentity;
 import net.minelink.ctplus.compat.base.NpcPlayerHelper;
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
-import org.bukkit.craftbukkit.v1_20_R3.CraftWorld;
-import org.bukkit.craftbukkit.v1_20_R3.entity.CraftPlayer;
+import org.bukkit.craftbukkit.CraftWorld;
+import org.bukkit.craftbukkit.entity.CraftPlayer;
 import org.bukkit.entity.Player;
 
 import java.io.File;
@@ -102,15 +105,21 @@ public class NpcPlayerHelperImpl implements NpcPlayerHelper {
             ItemStack item = entity.getItemBySlot(slot);
             if (item.getItem() == Items.AIR) continue;
 
-            // Set the attribute for this equipment to consider armor values and enchantments
-            // Actually getAttributeMap().a() is used with the previous item, to clear the Attributes
-            entity.getAttributes().removeAttributeModifiers(item.getAttributeModifiers(slot));
-            entity.getAttributes().addTransientAttributeModifiers(item.getAttributeModifiers(slot));
+            AttributeMap attributemapbase = entity.getAttributes();
+
+            item.forEachModifier(slot, (holder, attributemodifier) -> {
+                AttributeInstance attributemodifiable = attributemapbase.getInstance(holder);
+
+                if (attributemodifiable != null) {
+                    attributemodifiable.removeModifier(attributemodifier.id());
+                    attributemodifiable.addTransientModifier(attributemodifier);
+                }
+            });
 
             // This is also called by super.tick(), but the flag this.bx is not public
             List<Pair<EquipmentSlot, ItemStack>> list = Lists.newArrayList();
             list.add(Pair.of(slot, item));
-            Packet packet = new ClientboundSetEquipmentPacket(entity.getId(), list);
+            Packet<ClientGamePacketListener> packet = new ClientboundSetEquipmentPacket(entity.getId(), list);
             entity.serverLevel().chunkSource.broadcast(entity, packet);
         }
     }
@@ -119,28 +128,25 @@ public class NpcPlayerHelperImpl implements NpcPlayerHelper {
     public void syncOffline(Player player) {
         ServerPlayer entity = ((CraftPlayer) player).getHandle();
 
-        if (!(entity instanceof NpcPlayer)) {
+        if (!(entity instanceof NpcPlayer npcPlayer)) {
             throw new IllegalArgumentException();
         }
 
-        NpcPlayer npcPlayer = (NpcPlayer) entity;
         NpcIdentity identity = npcPlayer.getNpcIdentity();
         Player p = Bukkit.getPlayer(identity.getId());
         if (p != null && p.isOnline()) return;
 
-        PlayerDataStorage worldStorage = ((CraftWorld) Bukkit.getWorlds().get(0)).getHandle().getServer().playerDataStorage;
-        CompoundTag playerNbt = worldStorage.getPlayerData(identity.getId().toString());
-        if (playerNbt == null) return;
+        PlayerDataStorage worldStorage = ((CraftWorld) Bukkit.getWorlds().getFirst()).getHandle().getServer().playerDataStorage;
+        CompoundTag playerNbt = worldStorage.load(identity.getName(), identity.getId().toString()).orElse(null);
 
-        // foodTickTimer is now private in 1.8.3 -- still private in 1.12
+        // foodTickTimer is now private in 1.8.3 -- still private in 1.12 -- still private in 1.20.6
         Field foodTickTimerField;
         int foodTickTimer;
-
         try {
             //Although we can use Mojang mappings when developing, We need to use the obfuscated field name
-            //until we can run a full Mojmapped server. I personally used this site when updating to 1.18:
-            //https://nms.screamingsandals.org/1.18.1/net/minecraft/world/food/FoodData.html
-            foodTickTimerField = FoodData.class.getDeclaredField("d");
+            //until we can run a full Mojmapped server. I personally used this site when updating to 1.20.6:
+            // https://mappings.cephx.dev/1.20.6/net/minecraft/world/food/FoodData.html
+            foodTickTimerField = FoodData.class.getDeclaredField("d"); // todo fix
             foodTickTimerField.setAccessible(true);
             foodTickTimer = foodTickTimerField.getInt(entity.getFoodData());
         } catch (NoSuchFieldException | IllegalAccessException e) {
@@ -159,8 +165,8 @@ public class NpcPlayerHelperImpl implements NpcPlayerHelper {
         playerNbt.putShort("Fire", (short) entity.getRemainingFireTicks());
         playerNbt.put("Inventory", npcPlayer.getInventory().save(new ListTag()));
 
-        File file1 = new File(worldStorage.getPlayerDir(), identity.getId().toString() + ".dat.tmp");
-        File file2 = new File(worldStorage.getPlayerDir(), identity.getId().toString() + ".dat");
+        File file1 = new File(worldStorage.getPlayerDir(), identity.getId() + ".dat.tmp");
+        File file2 = new File(worldStorage.getPlayerDir(), identity.getId() + ".dat");
 
         try {
             NbtIo.writeCompressed(playerNbt, new FileOutputStream(file1));
